# sine-signal-processing

./: CMakeLists.txt  README.md
include/: const.h  interpolation.cpp  interpolation.h  quantization.cpp  quantization.h  sine_generator.cpp  sine_generator.h  tests.cpp  tests.h
results/: FloatQualityOfInterpolationData.csv  IntQualityOfInterpolationData.csv  QuantizationNoiseData.csv  all_cubicInterpolation_Data.csv  all_linearInterpolation_Data.csv  fixed_cubicInterpolation_Data.csv  fixed_linearInterpolation_Data.csv  float_cubicInterpolation_Data.csv  report.md
src/: main.cpp
